src/tests/snapshots/tera__tests__parser__parser_errors@macro_def_in_other_tag.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/macro_def_in_other_tag.txt
---
 Syntax error --> [macro_def_in_other_tag.txt:2:3]
  |
2 | {% macro popup() -%} hello {%- endmacro %}
  |    ^---
  = Macro definitions cannot be written in another tag.
        
